kubernetes/deployments/sequencer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-backend-strip-node-sequencer
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-backend-strip-node-sequencer
  template:
    metadata:
      labels:
        app: dev-backend-strip-node-sequencer
    spec:
      containers:
        - name: dev-backend-strip-node-sequencer
          image: 806060079291.dkr.ecr.us-east-1.amazonaws.com/dev/backend/strip-node/sequencer:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
