kubernetes/deployments/signer2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signer2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signer2
  template:
    metadata:
      labels:
        app: signer2
    spec:
      containers:
        - name: signer2
          image: 806060079291.dkr.ecr.us-east-1.amazonaws.com/dev/strip-node:latest
          resources:
            requests:
              cpu: "1000m"
              memory: "512Mi"
            limits:
              cpu: "3000m"
              memory: "2Gi"
          ports:
            - containerPort: 8081
            - containerPort: 30305
          command:
            - /bin/sh
            - -c
            - >
              PGSSLMODE=disable /app/strip-node
              --signerPublicKey 0x2c3e1d0ce0fef4e4ea935424ad1e5e54c0889f4e3c0bfb4c0c1f88e0f0c0c0c0
              --signerPrivateKey 0x2c3e1d0ce0fef4e4ea935424ad1e5e54c0889f4e3c0bfb4c0c1f88e0f0c0c0c0
              --rpcURL http://54.82.29.58:8545
              --httpPort 8081
              --port 30305
              --postgresHost dev-stage-stripchain.clrdhmz5qrnm.us-east-1.rds.amazonaws.com:5432
              --postgresPassword z2D76R4euvBd
              --postgresDB signer2
              --postgresUser postgres
              --bootnode /dns/bootnode/tcp/30303/p2p/QmTfM73oQxzx6DVyjCm5AECW3hVbXJiSLYtosNauaX9gJR
          readinessProbe:
            httpGet:
              path: /status
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /status
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
