kubernetes/deployments/validator1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator1
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator1
  template:
    metadata:
      labels:
        app: validator1
    spec:
      containers:
        - name: validator1
          image: 806060079291.dkr.ecr.us-east-1.amazonaws.com/dev/strip-node:latest
          resources:
            requests:
              cpu: "1000m"
              memory: "512Mi"
            limits:
              cpu: "3000m"
              memory: "2Gi"
          ports:
            - containerPort: 8080
            - containerPort: 30304
          command:
            - /bin/sh
            - -c
            - >
              PGSSLMODE=disable /app/strip-node
              --validatorPublicKey 0x26d1556a83c01a9d2b1cce29b32cb520238efc602f86481d2d0b9af8a2fff0cf
              --validatorPrivateKey 0xb0a0aa1369839ffbf2778fcedcad2ba70b0237e6071b791a80a6f9e11380ffa2
              --rpcURL http://54.82.29.58:8545
              --httpPort 8080
              --port 30304
              --postgresHost dev-stage-stripchain.clrdhmz5qrnm.us-east-1.rds.amazonaws.com:5432
              --postgresPassword z2D76R4euvBd
              --postgresDB validator1
              --postgresUser postgres
              --bootnode /dns/bootnode/tcp/30303/p2p/QmTfM73oQxzx6DVyjCm5AECW3hVbXJiSLYtosNauaX9gJR
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
