kubernetes/deployments/validator2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-strip-node-validator2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-strip-node-validator2
  template:
    metadata:
      labels:
        app: backend-strip-node-validator2
    spec:
      containers:
        - name: backend-strip-node-validator2
          image: 806060079291.dkr.ecr.us-east-1.amazonaws.com/dev/backend/strip-node/validator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "1500m"
              memory: "512Mi"
            limits:
              cpu: "3000m"
              memory: "2Gi"
          ports:
            - containerPort: 8080
            - containerPort: 30305
