kubernetes/deployments/validator4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator4
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator4
  template:
    metadata:
      labels:
        app: validator4
    spec:
      containers:
        - name: validator4
          image: public.ecr.aws/p3d4l8o0/strip-validator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
          ports:
            - containerPort: 8080
            - containerPort: 30307
