kubernetes/deployments/validator5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator5
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator5
  template:
    metadata:
      labels:
        app: validator5
    spec:
      containers:
        - name: validator5
          image: public.ecr.aws/p3d4l8o0/strip-validator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 30308
              name: p2p
