kubernetes/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:806060079291:certificate/3b1d2a54-ec40-40ee-a98f-e00757f5f4b3
    alb.ingress.kubernetes.io/subnets: subnet-0992c88cfabe19b42, subnet-071c47a540186c254, subnet-0ab041dd89aaa7dd5, subnet-0cc042f2f020fec15, subnet-05845cd9e038906cd
    alb.ingress.kubernetes.io/enable-cors: "true"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-port: "8082"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
  rules:
  - host: dev-api-tls.stripchain.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: apis-laststrip
            port:
              number: 80
  - host: sequencer.stripchain.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sequencer
            port:
              number: 8082
  - host: validator1.stripchain.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: validator1
            port:
              number: 8080
  - host: validator2.stripchain.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: validator2
            port:
              number: 8081
